// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`removeDrillsForInsightWidgetHandler remove should emit the appropriate events for remove drill for Insight Widget command 1`] = `
Array [
  Object {
    "correlationId": "testCorrelationId",
    "type": "GDC.DASH/EVT.INSIGHT_WIDGET.DRILLS_REMOVED",
  },
]
`;

exports[`removeDrillsForInsightWidgetHandler validate should fail if trying to remove drills of kpi widget 1`] = `
Object {
  "message": "Widget with ref: {\\"uri\\":\\"/gdc/md/referenceworkspace/obj/1386\\"} exists but is not an insight widget.",
  "reason": "USER_ERROR",
}
`;

exports[`removeDrillsForInsightWidgetHandler validate should fail if trying to remove drills of non-existent widget 1`] = `
Object {
  "message": "Cannot find insight widget with ref: {\\"uri\\":\\"missing\\"}.",
  "reason": "USER_ERROR",
}
`;

exports[`removeDrillsForInsightWidgetHandler validate should fail if trying to remove drills where origin is not specified by localIdRef 1`] = `
Object {
  "message": "Invalid measure or attribute origin: not-valid-ref. Error: Invalid ObjRef invariant expecting LocalIdRef",
  "reason": "USER_ERROR",
}
`;

exports[`removeDrillsForInsightWidgetHandler validate should fail if trying to remove drills where origin missing in widget drills 1`] = `
Object {
  "message": "Invalid measure or attribute origin: missing. Error: Cannot find drill definition specified by local identifier",
  "reason": "USER_ERROR",
}
`;
